fix: changed the search method and added applySorting method